--- a/boards/arm/eyelash_sofle/eyelash_sofle_right_defconfig
+++ b/boards/arm/eyelash_sofle/eyelash_sofle_right_defconfig
@@ -36,5 +36,12 @@ CONFIG_FLASH_MAP=y
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
 
+#usb-name
+CONFIG_USB_DEVICE_MANUFACTURER="sofle"
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
+
+
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
